--- a/adm/style/default_avatar_settings.html
+++ b/adm/style/default_avatar_settings.html
@@ -4,7 +4,7 @@
 	<h1>{L_SETTINGS}</h1>
 	
 	<div class="errorbox notice">
-		{DEFAULT_AVATAR_NOTICE}
+		<p>{DEFAULT_AVATAR_DIMENSIONS_NOTICE}</p>
 	</div>
 	
 	<fieldset class="default-avatar-options">
@@ -23,9 +23,19 @@
 		<dl>
 			<dt>
 				<label for="default_avatar_image">{L_ACP_DEFAULT_AVATAR_IMAGE}</label>
+				<br /><span>{DEFAULT_AVATAR_DRIVER_NOTICE}</span>
 			</dt>
 			<dd>
 				<input type="text" name="default_avatar_image"<!-- IF DEFAULT_AVATAR_IMAGE --> value="{DEFAULT_AVATAR_IMAGE}"<!-- ENDIF --> size="80" />
+			</dd>
+		</dl>
+		<dl>
+			<dt>
+				<label for="default_avatar_width">{L_ACP_DEFAULT_AVATAR_IMAGE_DIMENSIONS}</label>
+				<br /><span>{L_MAX_AVATAR_SIZE_EXPLAIN}</span>
+			</dt>
+			<dd>
+				<input type="number" min="{CONFIG_AVATAR_MIN_WIDTH}" max="{CONFIG_AVATAR_MAX_WIDTH}" value="{DEFAULT_AVATAR_WIDTH}" name="default_avatar_width" /> x <input type="number" min="{CONFIG_AVATAR_MIN_HEIGHT}" max="{CONFIG_AVATAR_MAX_HEIGHT}" value="{DEFAULT_AVATAR_HEIGHT}" name="default_avatar_height" />
 			</dd>
 		</dl>
 	</fieldset>
