Replace MD5 JavaScript library
* Small improvements and fixes.

--- a/adm/style/event/acp_overall_footer_after.html
+++ b/adm/style/event/acp_overall_footer_after.html
@@ -1,2 +1,7 @@
-<!-- INCLUDEJS @alfredoramos_defaultavatar/js/webtoolkit.md5.js -->
+<!-- IF S_ALLOW_CDN -->
+	<!-- INCLUDEJS https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/1.1.1/js/md5.min.js -->
+<!-- ELSE -->
+	<!-- INCLUDEJS @alfredoramos_defaultavatar/js/md5.min.js -->
+<!-- ENDIF -->
+
 <!-- INCLUDEJS @alfredoramos_defaultavatar/js/default_avatar_preview.js -->
