Small improvements and fixes

--- a/adm/style/acp_default_avatar_settings.html
+++ b/adm/style/acp_default_avatar_settings.html
@@ -36,7 +36,9 @@
 				<br /><span>{L_MAX_AVATAR_SIZE_EXPLAIN}</span>
 			</dt>
 			<dd>
-				<input type="number" min="{CONFIG_AVATAR_MIN_WIDTH}" max="{CONFIG_AVATAR_MAX_WIDTH}" value="{DEFAULT_AVATAR_WIDTH}" name="default_avatar_width" id="default_avatar_width" class="default-avatar-control" /> x <input type="number" min="{CONFIG_AVATAR_MIN_HEIGHT}" max="{CONFIG_AVATAR_MAX_HEIGHT}" value="{DEFAULT_AVATAR_HEIGHT}" name="default_avatar_height" id="default_avatar_height" class="default-avatar-control" />
+				<input type="number" min="{CONFIG_AVATAR_MIN_WIDTH}" max="{CONFIG_AVATAR_MAX_WIDTH}" value="{DEFAULT_AVATAR_WIDTH}" name="default_avatar_width" id="default_avatar_width" class="default-avatar-control" />
+				&nbsp;x&nbsp;
+				<input type="number" min="{CONFIG_AVATAR_MIN_HEIGHT}" max="{CONFIG_AVATAR_MAX_HEIGHT}" value="{DEFAULT_AVATAR_HEIGHT}" name="default_avatar_height" id="default_avatar_height" class="default-avatar-control" />
 			</dd>
 		</dl>
 		<dl>
@@ -45,15 +47,9 @@
 				<br /><span>{L_ACP_DEFAULT_AVATAR_IMAGE_PREVIEW_INFO}</span>
 			</dt>
 			<dd>
-				<div id="default_avatar_preview" data-board-url="{BOARD_URL}" data-min-width="{CONFIG_AVATAR_MIN_WIDTH}" data-max-width="{CONFIG_AVATAR_MAX_WIDTH}" data-min-height="{CONFIG_AVATAR_MIN_HEIGHT}" data-max-height="{CONFIG_AVATAR_MAX_HEIGHT}"></div>
+				<div id="default_avatar_preview" data-board-style="{BOARD_STYLE_PATH}" data-board-url="{BOARD_URL}" data-min-width="{CONFIG_AVATAR_MIN_WIDTH}" data-max-width="{CONFIG_AVATAR_MAX_WIDTH}" data-min-height="{CONFIG_AVATAR_MIN_HEIGHT}" data-max-height="{CONFIG_AVATAR_MAX_HEIGHT}"></div>
 			</dd>
 		</dl>
-	</fieldset>
-
-	<fieldset>
-		<!-- BEGIN styles_list -->
-		<pre><code>{styles_list.STYLE_NAME}</code></pre>
-		<!-- END styles_list -->
 	</fieldset>
 
 	<fieldset>
@@ -64,4 +60,5 @@
 		{S_FORM_TOKEN}
 	</fieldset>
 </form>
+
 <!-- INCLUDE overall_footer.html -->
