Fix avatars in private messages
Small improvements and fixes

--- a/adm/style/acp_default_avatar_settings.html
+++ b/adm/style/acp_default_avatar_settings.html
@@ -16,7 +16,7 @@
 			</dt>
 			<dd>
 				<input name="default_avatar_type" type="radio" class="radio default-avatar-control" value="style"<!-- IF DEFAULT_AVATAR_TYPE eq "style" --> checked="checked"<!-- ENDIF -->> {L_ACP_DEFAULT_AVATAR_TYPE_STYLE}&nbsp;
-				<input name="default_avatar_type" type="radio" class="radio default-avatar-control" value="local"<!-- IF DEFAULT_AVATAR_TYPE eq "local" --> "checked="checked"<!-- ENDIF -->> {L_ACP_DEFAULT_AVATAR_TYPE_LOCAL}&nbsp;
+				<input name="default_avatar_type" type="radio" class="radio default-avatar-control" value="local"<!-- IF DEFAULT_AVATAR_TYPE eq "local" --> checked="checked"<!-- ENDIF -->> {L_ACP_DEFAULT_AVATAR_TYPE_LOCAL}&nbsp;
 				<input name="default_avatar_type" type="radio" class="radio default-avatar-control" value="remote"<!-- IF DEFAULT_AVATAR_TYPE eq "remote" --> checked="checked"<!-- ENDIF -->> {L_ACP_DEFAULT_AVATAR_TYPE_REMOTE}&nbsp;
 				<input name="default_avatar_type" type="radio" class="radio default-avatar-control" value="gravatar"<!-- IF DEFAULT_AVATAR_TYPE eq "gravatar" --> checked="checked"<!-- ENDIF -->> {L_ACP_DEFAULT_AVATAR_TYPE_GRAVATAR}&nbsp;
 			</dd>
