Work in progress for #3

--- a/adm/style/acp_default_avatar_settings.html
+++ b/adm/style/acp_default_avatar_settings.html
@@ -4,7 +4,11 @@
 	<h1>{L_SETTINGS}</h1>
 	
 	<div class="errorbox notice">
+		<p>{DEFAULT_AVATAR_IMAGE_NOTICE}</p>
 		<p>{DEFAULT_AVATAR_DIMENSIONS_NOTICE}</p>
+		<!-- IF not CAN_ENABLE_AVATAR_BY_GENDER -->
+		<p>{L_ACP_DEFAULT_AVATAR_BY_GENDER_INFO}</p>
+		<!-- ENDIF -->
 	</div>
 	
 	<noscript class="errorbox error">{L_ACP_DEFAULT_AVATAR_JAVASCRIPT_WARNING}</noscript>
@@ -13,21 +17,59 @@
 		<dl>
 			<dt>
 				<label for="default_avatar_type">{L_ACP_DEFAULT_AVATAR_TYPE}</label>
+				<br /><span>{DEFAULT_AVATAR_TYPE_NOTICE}</span>
 			</dt>
 			<dd>
-				<input name="default_avatar_type" type="radio" class="radio default-avatar-control" value="style"<!-- IF DEFAULT_AVATAR_TYPE eq "style" --> checked="checked"<!-- ENDIF -->> {L_ACP_DEFAULT_AVATAR_TYPE_STYLE}&nbsp;
-				<input name="default_avatar_type" type="radio" class="radio default-avatar-control" value="local"<!-- IF DEFAULT_AVATAR_TYPE eq "local" --> checked="checked"<!-- ENDIF -->> {L_ACP_DEFAULT_AVATAR_TYPE_LOCAL}&nbsp;
-				<input name="default_avatar_type" type="radio" class="radio default-avatar-control" value="remote"<!-- IF DEFAULT_AVATAR_TYPE eq "remote" --> checked="checked"<!-- ENDIF -->> {L_ACP_DEFAULT_AVATAR_TYPE_REMOTE}&nbsp;
-				<input name="default_avatar_type" type="radio" class="radio default-avatar-control" value="gravatar"<!-- IF DEFAULT_AVATAR_TYPE eq "gravatar" --> checked="checked"<!-- ENDIF -->> {L_ACP_DEFAULT_AVATAR_TYPE_GRAVATAR}&nbsp;
+				<input type="radio" name="default_avatar_type" class="radio default-avatar-control" value="style"<!-- IF DEFAULT_AVATAR_TYPE eq "style" --> checked="checked"<!-- ENDIF -->> {L_ACP_DEFAULT_AVATAR_TYPE_STYLE}&nbsp;
+				<input type="radio" name="default_avatar_type" class="radio default-avatar-control" value="local"<!-- IF DEFAULT_AVATAR_TYPE eq "local" --> checked="checked"<!-- ENDIF -->> {L_ACP_DEFAULT_AVATAR_TYPE_LOCAL}&nbsp;
+				<input type="radio" name="default_avatar_type" class="radio default-avatar-control" value="remote"<!-- IF DEFAULT_AVATAR_TYPE eq "remote" --> checked="checked"<!-- ENDIF -->> {L_ACP_DEFAULT_AVATAR_TYPE_REMOTE}&nbsp;
+				<input type="radio" name="default_avatar_type" class="radio default-avatar-control" value="gravatar"<!-- IF DEFAULT_AVATAR_TYPE eq "gravatar" --> checked="checked"<!-- ENDIF -->> {L_ACP_DEFAULT_AVATAR_TYPE_GRAVATAR}&nbsp;
+			</dd>
+		</dl>
+		
+		<!-- IF CAN_ENABLE_AVATAR_BY_GENDER -->
+		<dl>
+			<dt>
+				<label for="default_avatar_by_gender">{L_ACP_DEFAULT_AVATAR_BY_GENDER}</label>
+			</dt>
+			<dd>
+				<input type="radio" name="default_avatar_by_gender" class="radio default-avatar-control" value="1"<!-- IF DEFAULT_AVATAR_BY_GENDER --> checked="checked"<!-- ENDIF --> /> {L_YES}&nbsp;
+				<input type="radio" name="default_avatar_by_gender" class="radio default-avatar-control" value="0"<!-- IF not DEFAULT_AVATAR_BY_GENDER --> checked="checked"<!-- ENDIF --> /> {L_NO}
 			</dd>
 		</dl>
 		<dl>
 			<dt>
+				<label for="default_avatar_image_extensions">{L_ACP_DEFAULT_AVATAR_BY_GENDER_IMAGE_FORMATS}</label>
+				<br /><span>{DEFAULT_AVATAR_BY_GENDER_NOTICE}</span>
+			</dt>
+			<dd>
+				<input type="text" name="default_avatar_image_extensions" id="default_avatar_image_extensions"<!-- IF DEFAULT_AVATAR_IMAGE_EXTENSIONS --> value="{DEFAULT_AVATAR_IMAGE_EXTENSIONS}"<!-- ENDIF --> size="40" class="default-avatar-control" />
+			</dd>
+		</dl>
+		<!-- ENDIF -->
+		
+		<dl>
+			<dt>
 				<label for="default_avatar_image">{L_ACP_DEFAULT_AVATAR_IMAGE}</label>
-				<br /><span>{DEFAULT_AVATAR_TYPE_NOTICE}</span>
 			</dt>
 			<dd>
 				<input type="text" name="default_avatar_image" id="default_avatar_image"<!-- IF DEFAULT_AVATAR_IMAGE --> value="{DEFAULT_AVATAR_IMAGE}"<!-- ENDIF --> size="80" class="default-avatar-control" />
+			</dd>
+		</dl>
+		<dl>
+			<dt>
+				<label for="default_avatar_image_female">{L_ACP_DEFAULT_AVATAR_IMAGE_FEMALE}</label>
+			</dt>
+			<dd>
+				<input type="text" name="default_avatar_image_female" id="default_avatar_image_female"<!-- IF DEFAULT_AVATAR_IMAGE_FEMALE --> value="{DEFAULT_AVATAR_IMAGE_FEMALE}"<!-- ENDIF --> size="80" class="default-avatar-control" />
+			</dd>
+		</dl>
+		<dl>
+			<dt>
+				<label for="default_avatar_image_male">{L_ACP_DEFAULT_AVATAR_IMAGE_MALE}</label>
+			</dt>
+			<dd>
+				<input type="text" name="default_avatar_image_male" id="default_avatar_image_male"<!-- IF DEFAULT_AVATAR_IMAGE_MALE --> value="{DEFAULT_AVATAR_IMAGE_MALE}"<!-- ENDIF --> size="80" class="default-avatar-control" />
 			</dd>
 		</dl>
 		<dl>
@@ -54,8 +96,8 @@
 
 	<fieldset>
 		<p class="submit-buttons">
-			<input class="button1" type="submit" id="submit" name="submit" value="{L_SUBMIT}" />&nbsp;
-			<input class="button2" type="reset" id="reset" name="reset" value="{L_RESET}" />
+			<input type="submit" class="button1" id="submit" name="submit" value="{L_SUBMIT}" />&nbsp;
+			<input type="reset" class="button2" id="reset" name="reset" value="{L_RESET}" />
 		</p>
 		{S_FORM_TOKEN}
 	</fieldset>
